--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <link rel="stylesheet" href="Css/estilo.css">
     <!--Google fond-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Righteous&display=swap" rel="stylesheet">
@@ -25,10 +27,11 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-light">
         <div class="container-fluid">
-            <a href="./index.html" class="navbar-brand"><img src="./Imagenes/LOGOCALMA.png" alt="Logo" class="imgLogo"></a>
+            <a href="./index.html" class="navbar-brand"><img src="./Imagenes/LOGOCALMA.png" alt="Logo"
+                    class="imgLogo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <div class="menuham-container"><img src="./Imagenes/mhambu.png" alt="Logo" class="menuham"></div>
+                <div class="menuham-container"><img src="./Imagenes/mhambu.png" alt="MenuHamburgesa" class="menuham"></div>
 
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -56,10 +59,10 @@
     <main class="contGaleria">
         <section>
             <div class="galeria">
-                <a href="./pages/Galeria.html"><img src="./Imagenes/1.png"></a>
-                <a href="./pages/Galeria.html"><img src="./Imagenes/2.png"></a>
-                <a href="./pages/Galeria.html"><img src="./Imagenes/3.png"></a>
-                <a href="./pages/Galeria.html"><img src="./Imagenes/4.png"></a>
+                <a href="./pages/Galeria.html"><img src="./Imagenes/1.png" alt="Bebe en sesion de new born"></a>
+                <a href="./pages/Galeria.html"><img src="./Imagenes/2.png" alt="Bebe en sesion de new born desde arriba "></a>
+                <a href="./pages/Galeria.html"><img src="./Imagenes/3.png" alt="Bebe en sesion de new born"></a>
+                <a href="./pages/Galeria.html"><img src="./Imagenes/4.png" alt="nene con osito"></a>
             </div>
         </section>
     </main>
@@ -108,9 +111,9 @@
     <!--Parte 4-->
     <section class="imagFondo">
         <div class="fotoFondo">
-            <img src="./Imagenes/mellis.png">
-            <img src="./Imagenes/panza.png">
-            <img src="./Imagenes/hijanoe.png">
+            <img src="./Imagenes/mellis.png"alt="mellisos en sesion de new born">
+            <img src="./Imagenes/panza.png"alt="panza de embarazada">
+            <img src="./Imagenes/hijanoe.png"alt="nena con una flor en la boca">
         </div>
     </section>
 
@@ -121,7 +124,7 @@
             <span> Copyright © </span>
             <a href="https://www.instagram.com/calma.fotografia/" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://www.facebook.com/calmanewborn" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <i class="fas fa-envelope"></i>
+            <a href="mailto:calmafotografia@gmail.com"><i class="fas fa-envelope"></i></a>
         </div>
 
     </footer>
