--- a/pages/Conocenos.html
+++ b/pages/Conocenos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Descripcion de Calma fotografia new born Tandil">
+    <meta name="description" content="Descripcion de Calma fotografia new born Tandil, fotografia infantil, experiencia, respeto, profesionalismo,fotos de alta calidad,new born, niños y recien nacidos">
     <title>Conocenos Calma Fotografia</title>
     <!--fond Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="../Css/estilo.css">
     <!--Google fond-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Righteous&display=swap" rel="stylesheet">
@@ -49,12 +51,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./Precio.html">Precio</a>
                     </li>
+                    
                 </ul>
             </div>
         </div>
     </nav>
 
-    <h2>Nuestra Historia</h2>
+    <h1>Nuestra Historia</h1>
     <div class="conteconocenos">
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam est labore ratione laborum cumque
             praesentium ducimus, minus nostrum veniam! Aspernatur non ratione dolore id eligendi autem, ea
@@ -67,7 +70,7 @@
             tenetur. Nisi provident tempore suscipit repudiandae cupiditate consectetur eveniet quam harum est.
         </p>
     </div>
-    <h2>Estudios y Cursos</h2>
+    <h2>Estudios y Cursos</h2>>
     <section class="infoconocenos">
         <article class="institucional">
             <h3>Fotografia</h3>
@@ -94,9 +97,9 @@
 
     <section class="imagFondo">
         <div class="fotoFondoconocenos">
-            <img src="../Imagenes/durme.png">
-            <img src="../Imagenes/osito.png">
-            <img src="../Imagenes/chiquito.png">
+            <img src="../Imagenes/durme.png" alt="bebe durmiendo">
+            <img src="../Imagenes/osito.png" alt="bebe con orejeras de osito">
+            <img src="../Imagenes/chiquito.png" alt="bebe sesiond e new born con gorrito azul">
         </div>
     </section>
 
@@ -105,7 +108,7 @@
             <span> Copyright © </span>
             <a href="https://www.instagram.com/calma.fotografia/" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://www.facebook.com/calmanewborn" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <i class="fas fa-envelope"></i>
+            <a href="mailto:calmafotografia@gmail.com"><i class="fas fa-envelope"></i></a>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
