--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -7,19 +7,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Conacto con Calma fotografica Tandil new born ">
   <title>Contacto Calma Fotografia</title>
-    <!--fond Awesome-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-    <!--Css-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../Css/estilo.css">
-    <!--Google fond-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;300&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Righteous&display=swap" rel="stylesheet">
+  <!--fond Awesome-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+  <!--Css-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="../Css/estilo.css">
+  <!--Google fond-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Righteous&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
   <nav class="navbar navbar-expand-sm navbar-light ">
@@ -51,7 +54,7 @@
       </div>
     </div>
   </nav>
-
+  <h1>Contactanos</h1>
   <form class="form-container">
     <div class="form-group form-groupContacto">
       <label for="full_name_id" class="control-label">Nombre</label>
@@ -75,7 +78,7 @@
 
     <div class="form-group form-groupContacto">
       <label for="state_id" class="control-label">Donde nos conociste?</label>
-      <select  class="form-control" >
+      <select class="form-control">
         <option class="opciones" value="conociste">Donde nos conociste?</option>
         <option class="opciones" value="Fb">Facebook</option>
         <option class="opciones" value="Inst">Instagram</option>
@@ -97,17 +100,17 @@
       <button type="submit" class="btn btn-dark">Guardar</button>
       <button type="clean" class="btn btn-dark">Limpiar</button>
     </div>
-</form>
+  </form>
   <!--Parte 5-->
   <footer class="footer">
     <div class="redes">
-        <span> Copyright © </span>
-        <a href="https://www.instagram.com/calma.fotografia/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.facebook.com/calmanewborn" target="_blank"><i class="fab fa-facebook-f"></i></a>
-        <i class="fas fa-envelope"></i>
+      <span> Copyright © </span>
+      <a href="https://www.instagram.com/calma.fotografia/" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.facebook.com/calmanewborn" target="_blank"><i class="fab fa-facebook-f"></i></a>
+      <a href="mailto:calmafotografia@gmail.com"><i class="fas fa-envelope"></i></a>
     </div>
 
-</footer>
+  </footer>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
