--- a/pages/Galeria.html
+++ b/pages/Galeria.html
@@ -5,17 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Galeria de fotos Calma new born Tandil">
+  <meta name="description"
+    content="Galeria de fotos Calma new born Tandil, fotografia infantil, experiencia, respeto, profesionalismo,fotos de alta calidad,new born, niños y recien nacidos">
   <title>Calma Fotografia Galeria</title>
   <!--fond Awesome-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   <!--Css-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="../Css/estilo.css">
   <!--Google fond-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Righteous&display=swap" rel="stylesheet">
@@ -32,44 +35,45 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./Galeria.html">Galeria</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./Conocenos.html">Conocenos</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./Contacto.html">Contacto</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./Precio.html">Precio</a>
-            </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Galeria.html">Galeria</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Conocenos.html">Conocenos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Contacto.html">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Precio.html">Precio</a>
+          </li>
+
         </ul>
-    </div>
+      </div>
     </div>
   </nav>
   <div class="container-fluid">
-    <h2>Galeria de imagenes</h2>
+    <h1>Galeria de imagenes</h1>
     <h3>Berna con su osito</h3>
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../Imagenes/berna3.png" class="d-block w-75" alt="...">
+          <img src="../Imagenes/berna3.png" class="d-block w-75" alt="nene con osito">
         </div>
         <div class="carousel-item">
-          <img src="../Imagenes/berna4.png" class="d-block w-75" alt="...">
+          <img src="../Imagenes/berna4.png" class="d-block w-75" alt="nene con osito mirando para arriba">
         </div>
         <div class="carousel-item">
-          <img src="../Imagenes/berna2.png" class="d-block w-75" alt="...">
+          <img src="../Imagenes/berna2.png" class="d-block w-75" alt="nene abrazando a osito">
         </div>
         <div class="carousel-item">
-          <img src="../Imagenes/4.png" class=" d-block w-75" alt="...">
+          <img src="../Imagenes/4.png" class=" d-block w-75" alt="nene sentado con us osito">
         </div>
         <div class="carousel-item">
-          <img src="../Imagenes/berna1.png" class="d-block w-75" alt="...">
+          <img src="../Imagenes/berna1.png" class="d-block w-75" alt="nene en las sienrras de tandil con su osito">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -85,13 +89,13 @@
     <div id="carouselExampleFade2" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../Imagenes/almen3.png" class="d-block w-75" alt="...">
+          <img src="../Imagenes/almen3.png" class="d-block w-75" alt="beba primer plano new born">
         </div>
         <div class="carousel-item">
-          <img src="../Imagenes/alemn2.png" class="d-block w-75" alt="...">
+          <img src="../Imagenes/alemn2.png" class="d-block w-75" alt="beba new born">
         </div>
         <div class="carousel-item">
-          <img src="../Imagenes/almen1.png" class="d-block w-75" alt="...">
+          <img src="../Imagenes/almen1.png" class="d-block w-75" alt="beba new born primer plano">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade2" data-bs-slide="prev">
@@ -107,13 +111,13 @@
     <div id="carouselExampleFade3" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../Imagenes/pepa3.png" class="d-block w-75" alt="...">
+          <img src="../Imagenes/pepa3.png" class="d-block w-75" alt="nena acostada oliendo una flor">
         </div>
         <div class="carousel-item">
-          <img src="../Imagenes/pepa2.png" class="d-block w-75" alt="...">
+          <img src="../Imagenes/pepa2.png" class="d-block w-75" alt="nena mirando para el costado acostada">
         </div>
         <div class="carousel-item">
-          <img src="../Imagenes/pepa1.png" class="d-block w-75" alt="...">
+          <img src="../Imagenes/pepa1.png" class="d-block w-75" alt="nena acostada riendo">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade3" data-bs-slide="prev">
@@ -132,7 +136,7 @@
       <span> Copyright © </span>
       <a href="https://www.instagram.com/calma.fotografia/" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="https://www.facebook.com/calmanewborn" target="_blank"><i class="fab fa-facebook-f"></i></a>
-      <i class="fas fa-envelope"></i>
+      <a href="mailto:calmafotografia@gmail.com"><i class="fas fa-envelope"></i></a>
     </div>
     </div>
 
