--- a/pages/Precio.html
+++ b/pages/Precio.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Valor del trabajo para new born Tandil">
+    <meta name="description"
+        content="Valor del trabajo para new born Tandil, fotografia infantil, experiencia, respeto, profesionalismo,fotos de alta calidad,new born, niños y recien nacidos">
     <title>Precio Calma Fotografia</title>
     <!--fond Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
@@ -15,7 +16,9 @@
     <link rel="stylesheet" href="../Css/estilo.css">
     <!--Google fond-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Righteous&display=swap" rel="stylesheet">
@@ -47,11 +50,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./Precio.html">Precio</a>
                     </li>
+
                 </ul>
             </div>
         </div>
     </nav>
-    <h2> Precios por nuestros servicios</h2>
+    <h1> Precios por nuestros servicios</h1>
     <table class="table">
         <thead>
             <tr>
@@ -85,19 +89,20 @@
                 <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, praesentium.</td>
                 <td>75</td>
                 <td>$15500</td>
+            </tr>
             <tr>
-                <td scope="row"> Casamientos</td>
+                <th scope="row">Casamiento</th>
                 <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, praesentium.</td>
                 <td>100</td>
-                <td>$20000</td>
+                <td>$25500</td>
             </tr>
         </tbody>
     </table>
     <section class="imagFondo">
         <div class="fotoFondoconocenos">
-            <img src="../Imagenes/nenita.png">
-            <img src="../Imagenes/sosten.png">
-            <img src="../Imagenes/hermanos.png">
+            <img src="../Imagenes/nenita.png" alt="nenita">
+            <img src="../Imagenes/sosten.png" alt="manos sosteniendo a un bebe en plena sesiond e new born">
+            <img src="../Imagenes/hermanos.png" alt="Hermanos a caballito">
         </div>
     </section>
     <footer class="footer">
@@ -105,8 +110,7 @@
             <span> Copyright © </span>
             <a href="https://www.instagram.com/calma.fotografia/" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://www.facebook.com/calmanewborn" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <i class="fas fa-envelope"></i>
-        </div>
+            <a href="mailto:calmafotografia@gmail.com"><i class="fas fa-envelope"></i></a>
 
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
