--- a/index.html
+++ b/index.html
@@ -14,13 +14,8 @@
     <link rel="stylesheet" href="Css/estilo.css">
     <!--Google fond-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Righteous&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300&display=swap" rel="stylesheet">
     <title>Calma Fotografia</title>
 </head>
 
@@ -31,7 +26,8 @@
                     class="imgLogo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <div class="menuham-container"><img src="./Imagenes/mhambu.png" alt="MenuHamburgesa" class="menuham"></div>
+                <div class="menuham-container"><img src="./Imagenes/mhambu.png" alt="MenuHamburgesa" class="menuham">
+                </div>
 
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -60,7 +56,8 @@
         <section>
             <div class="galeria">
                 <a href="./pages/Galeria.html"><img src="./Imagenes/1.png" alt="Bebe en sesion de new born"></a>
-                <a href="./pages/Galeria.html"><img src="./Imagenes/2.png" alt="Bebe en sesion de new born desde arriba "></a>
+                <a href="./pages/Galeria.html"><img src="./Imagenes/2.png"
+                        alt="Bebe en sesion de new born desde arriba "></a>
                 <a href="./pages/Galeria.html"><img src="./Imagenes/3.png" alt="Bebe en sesion de new born"></a>
                 <a href="./pages/Galeria.html"><img src="./Imagenes/4.png" alt="nene con osito"></a>
             </div>
@@ -111,9 +108,9 @@
     <!--Parte 4-->
     <section class="imagFondo">
         <div class="fotoFondo">
-            <img src="./Imagenes/mellis.png"alt="mellisos en sesion de new born">
-            <img src="./Imagenes/panza.png"alt="panza de embarazada">
-            <img src="./Imagenes/hijanoe.png"alt="nena con una flor en la boca">
+            <img src="./Imagenes/mellis.png" alt="mellisos en sesion de new born">
+            <img src="./Imagenes/panza.png" alt="panza de embarazada">
+            <img src="./Imagenes/hijanoe.png" alt="nena con una flor en la boca">
         </div>
     </section>
 
